* Xmoto
* Xotic
* Ys - Ark of Napishtim
* Yukkuri Panic!
* Zen of Sudoku
* Zoo Tycoon
* Zuma's Revenge
* Zuma's Revenge - Adventure

Updated Windows Games:
* Updated various games using GSM data
* Dragonshard - Corrected, was completely wrong
* Updated games through J where applicable to have link paths
* Tweaked a lot of games to try to increase compatability with GameSaveManager
=2012/7/31=
New Windows Games:
* The 11th Hour (GoG only)
* Aztaka - Steam only - Contributed by telroa
* Blocks That Matter - Contributed by hadderakk
* Dead Horde - Contributed by telroa
* Journeyman Project 3: Legacy of Time (GoG only)
* Max Payne 3 - Contributed by Paul Taylor
* Pirates of Black Cove
* Port Royale 3: Pirates & Merchants
* Quantum Conundrum (Steam only)
* Serious Sam Double D - Contributed by telroa
* Serious Sam The Random Encounter - Contributed by telroa
* SkyDrift - Contributed by hadderakk
* Tribes Ascend - Settings only - Contributed by Paul Taylor
Updated Windows Games:
* Assassin's Creed: Brotherhood - Added XP path
* Dreamfall: The Longest Journery - Added GoG info
* VVVVVV - Added another path, not sure why there's so many - Contribtued by telroa
=2012/7/18=
New Windows Games:
* AI War: Fleet Command
* Armada 2526
* Assassin's Creed: Revelations
* Cities XL
* Conflict: Denied Ops
* Crusader Kings II
* Endless Space
* Escape Goat
* Europa Universalis III
* Harvest: Massive Encounter
* Heroes of Might and Magic VI
* Insanely Twisted Shadow Planet
* Katawa Shoujo
* Major League Baseball 2K9
* Major League Baseball 2K10
* Major League Baseball 2K11
* Minecraft
* NBA 2K11
* Puzzle Quest: Galactrix
* Realflight G5
* Rogue Trooper
* Savage 2
* Shoot Many Robots
* Tropico 4 - Contributed by alan.briolat
* Virtual Families
Updated Windows Games:
* Darwinia - Added XP path
* Gemini Rue - Added GoG info
* Uplink - Added GoG info
* The Witcher 2 - Added Steamcloud info
=2012/7/11=
New Windows Games:
* Aliens vs. Predator Classic
* And Yet It Moves - Steam Only